// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedText renders correctly with default type 1`] = `
<Text
  style={
    [
      {
        "color": "black",
      },
      {
        "fontFamily": "DinNextRounded",
        "fontSize": 24,
        "lineHeight": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Default Text
</Text>
`;

exports[`ThemedText renders correctly with defaultSemiBold type 1`] = `
<Text
  style={
    [
      {
        "color": "black",
      },
      undefined,
      undefined,
      {
        "fontFamily": "DinNextRounded",
        "fontSize": 24,
        "fontWeight": "600",
        "lineHeight": 32,
      },
      undefined,
      undefined,
    ]
  }
>
  SemiBold Text
</Text>
`;

exports[`ThemedText renders correctly with subtitle type 1`] = `
<Text
  style={
    [
      {
        "color": "black",
      },
      undefined,
      undefined,
      undefined,
      {
        "fontFamily": "DinNextRounded",
        "fontSize": 32,
        "fontWeight": "bold",
      },
      undefined,
    ]
  }
>
  Subtitle Text
</Text>
`;

exports[`ThemedText renders correctly with title type 1`] = `
<Text
  style={
    [
      {
        "color": "black",
      },
      undefined,
      {
        "fontFamily": "FeatherBold",
        "fontSize": 48,
        "fontWeight": "bold",
        "lineHeight": 58,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Title Text
</Text>
`;
